XIVY-10526 Fix error when sorting indices